*several bug fixes and enhancements *started to clean up some of the code *added support for both asynchronous services and services without inputs *caching now done by code from jmoby (CentralDigestCachedImpl); once this code switches to the new jmoby maven repository, the caching will be RDF based and much quicker.
I will commit an updated pom file that points to the new biomoby.org maven repository at a later time (the current update is for asynchronous libraries)


git-svn-id: http://taverna.googlecode.com/svn@6149 bf327186-88b3-11dd-a302-d386e5130c1c