@@ -5,6 +5,7 @@
  */
 package org.biomoby.client.taverna.plugin;
 
+import java.net.URL;
 import java.util.ArrayList;
 
 import javax.swing.tree.DefaultMutableTreeNode;
@@ -18,7 +19,7 @@ import org.embl.ebi.escience.scuflui.workbench.ScavengerCreationException;
  * Biomoby Central Registry.
  * <p>
  * 
- * @version $Id: BiomobyScavenger.java,v 1.6 2007-12-19 16:13:09 edwardkawas Exp $
+ * @version $Id: BiomobyScavenger.java,v 1.7 2008-09-05 14:34:41 edwardkawas Exp $
  * @author Martin Senger
  */
 public class BiomobyScavenger extends Scavenger {
@@ -36,47 +37,8 @@ public class BiomobyScavenger extends Scavenger {
 	 */
 	@SuppressWarnings("unchecked")
 	public BiomobyScavenger(String base) throws ScavengerCreationException {
-		super("Biomoby @ " + base);
-		// create the tree helper
-		try {
-			helper = new BiomobyScavengerWorker(base, null);
-		} catch (MobyException e1) {
-			throw new ScavengerCreationException(
-					"There was a problem creating the Biomoby Scavenger:"
-							+ e1.getMessage());
-		}
-		ArrayList<DefaultMutableTreeNode> list;
-		try {
-			list = helper.getServices();
-		} catch (MobyException e) {
-			throw new ScavengerCreationException(e.getMessage());
-		}
-		for(DefaultMutableTreeNode node : list) {
-			add(node);
-		}
-		list = null;
-		
-		try {
-			// create the datatype tree
-			insert(helper.getDataTypes(), 0);
-			
-		} catch (MobyException e) {
-			ScavengerCreationException sce = new ScavengerCreationException(
-					"Could not create the Datatype ontology node: " + e.getMessage());
-			sce.initCause(e);
-			throw sce;
-		}
-		/* do this to speed things up for the user; here we 
-		 * read the RDF from a file, rather than downloading 
-		 * it again whenever the datatypes are used 
-		 */
-		try {
-		String url = helper.getCacheImpl().getMOBYCENTRAL_REGISTRY_URL();
-		String filelocation = helper.getCacheImpl().getDatatypeRDFLocation();
-		org.biomoby.registry.meta.Registry reg = new org.biomoby.registry.meta.Registry(url,url,"http://domain.com/MOBY/Central" );
-		org.biomoby.shared.MobyDataType.loadDataTypes(((new java.io.File(filelocation)).toURL()), reg);
-		} catch (Exception e){}
-	}
+		this(base, null);
+        }
 
 	/**
 	 * constructor that taverna's init uses
@@ -84,11 +46,11 @@ public class BiomobyScavenger extends Scavenger {
 	@SuppressWarnings("unchecked")
 	public BiomobyScavenger(String base, String uri)
 			throws ScavengerCreationException {
-		super("Biomoby @ " + base + "," + uri);
+		super("Biomoby @ " + base);
 		// get list of services and their authorities
 		// create the tree helper
 		try {
-			helper = new BiomobyScavengerWorker(base, null);
+			helper = new BiomobyScavengerWorker(base, uri);
 		} catch (MobyException e1) {
 			throw new ScavengerCreationException(
 					"There was a problem creating the Biomoby Scavenger:"
@@ -118,12 +80,38 @@ public class BiomobyScavenger extends Scavenger {
 		 * read the RDF from a file, rather than downloading 
 		 * it again whenever the datatypes are used 
 		 */
-		try {
-		String url = helper.getCacheImpl().getMOBYCENTRAL_REGISTRY_URL();
-		String filelocation = helper.getCacheImpl().getDatatypeRDFLocation();
-		org.biomoby.registry.meta.Registry reg = new org.biomoby.registry.meta.Registry(url,url,uri );
-		org.biomoby.shared.MobyDataType.loadDataTypes(((new java.io.File(filelocation)).toURL()), reg);
-		} catch (Exception e){}
+		
+		new Thread() {
+        	    public void run() {
+        		try {
+        		    String url = helper.getRegistryUrl();
+        		    String filelocation = helper.getDatatypesRdfUrl();
+        		    org.biomoby.registry.meta.Registry reg = new org.biomoby.registry.meta.Registry(
+        			    url, url, "http://domain.com/MOBY/Central");
+        		    org.biomoby.shared.MobyDataType.loadDataTypes((new URL(
+        			    filelocation)), reg);
+        		} catch (Exception e) {
+        		    e.printStackTrace();
+        		}
+        	    }
+        	}.start();
+        	new Thread() {
+        	    public void run() {
+        		try {
+        		    String url = helper.getRegistryUrl();
+        		    String filelocation = helper.getNamespacesRdfUrl();
+        		    org.biomoby.registry.meta.Registry reg = new org.biomoby.registry.meta.Registry(
+        			    url, url, "http://domain.com/MOBY/Central");
+        		    /*org.biomoby.shared.MobyNamespace.loadNamespace((new URL(
+        			    filelocation)), reg);*/
+        		    org.biomoby.shared.MobyNamespace.getNamespace("foo",reg);
+        		    
+        		} catch (Exception e) {
+        		    e.printStackTrace();
+        		}
+        	    }
+        	}.start();
+		
 	}
 
 	/**
